--- a/Wisnuc-iOS-Swift/Modules/Files/View/BottomSheetCell/FilesSequenceTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/Files/View/BottomSheetCell/FilesSequenceTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="47.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="files_arrow_up.png" translatesAutoresizingMaskIntoConstraints="NO" id="g9b-nR-bTJ">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g9b-nR-bTJ">
                         <rect key="frame" x="16" y="12" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="4mZ-qb-umj"/>
@@ -50,7 +50,4 @@
             <point key="canvasLocation" x="34" y="56"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="files_arrow_up.png" width="24" height="24"/>
-    </resources>
 </document>
