--- a/Wisnuc-iOS-Swift/Modules/Files/View/Info/FilesFileInfoTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/Files/View/Info/FilesFileInfoTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="width" constant="1" id="Suf-Jg-5fW"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="files_files.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ouj-Vu-VRZ">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="files_folder.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ouj-Vu-VRZ">
                         <rect key="frame" x="161" y="6" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="Jtd-0Y-3LT"/>
@@ -80,6 +80,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="files_files.png" width="24" height="24"/>
+        <image name="files_folder.png" width="24" height="24"/>
     </resources>
 </document>
