--- a/Wisnuc-iOS-Swift/Modules/TransferTask/View/TransferTaskTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/TransferTask/View/TransferTaskTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -45,12 +45,31 @@
                             <constraint firstAttribute="width" constant="18" id="raV-Y6-DWV"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bzx-wX-DkT">
+                        <rect key="frame" x="280" y="24" width="24" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="24" id="3Ey-PP-MvF"/>
+                            <constraint firstAttribute="height" constant="24" id="a6B-LH-nni"/>
+                        </constraints>
+                    </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ITN-Sd-jWz" customClass="MDCProgressView">
+                        <rect key="frame" x="264" y="16.5" width="40" height="40"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="n23-52-HZ3"/>
+                            <constraint firstAttribute="width" constant="40" id="smN-lh-3Xj"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="myi-uH-6WF" firstAttribute="centerY" secondItem="lhb-yg-Y0w" secondAttribute="centerY" id="598-At-Pz0"/>
+                    <constraint firstAttribute="trailing" secondItem="bzx-wX-DkT" secondAttribute="trailing" constant="16" id="DM8-Fu-imW"/>
                     <constraint firstItem="Hsk-rR-deJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Fei-jb-KAq"/>
                     <constraint firstItem="lhb-yg-Y0w" firstAttribute="leading" secondItem="Hsk-rR-deJ" secondAttribute="leading" id="FfV-i3-Pxp"/>
                     <constraint firstItem="myi-uH-6WF" firstAttribute="leading" secondItem="lhb-yg-Y0w" secondAttribute="trailing" constant="8" id="Lwh-Z9-jiQ"/>
+                    <constraint firstAttribute="trailing" secondItem="ITN-Sd-jWz" secondAttribute="trailing" constant="16" id="ZE8-8J-ohC"/>
+                    <constraint firstItem="ITN-Sd-jWz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bP6-IA-skq"/>
+                    <constraint firstItem="bzx-wX-DkT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="faW-rw-UiQ"/>
                     <constraint firstAttribute="trailing" secondItem="Hsk-rR-deJ" secondAttribute="trailing" constant="56" id="hZs-Cb-nU9"/>
                     <constraint firstItem="ulA-DQ-mvo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="kw0-oK-t8n"/>
                     <constraint firstItem="Hsk-rR-deJ" firstAttribute="leading" secondItem="ulA-DQ-mvo" secondAttribute="trailing" constant="32" id="mdo-gf-SvX"/>
@@ -61,9 +80,12 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <inset key="separatorInset" minX="72" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
+                <outlet property="controlButton" destination="bzx-wX-DkT" id="0wT-T6-uwb"/>
+                <outlet property="controlButtonTap" destination="bzx-wX-DkT" id="YWZ-jI-bll"/>
                 <outlet property="detailImageView" destination="lhb-yg-Y0w" id="rvz-cX-GcW"/>
                 <outlet property="detailLabel" destination="myi-uH-6WF" id="sak-YQ-K6K"/>
                 <outlet property="leftImageView" destination="ulA-DQ-mvo" id="Pud-z0-DO2"/>
+                <outlet property="progress" destination="ITN-Sd-jWz" id="0I0-D7-zzn"/>
                 <outlet property="titleLabel" destination="Hsk-rR-deJ" id="Ln2-Eq-rgt"/>
             </connections>
             <point key="canvasLocation" x="34" y="68"/>
