--- a/Wisnuc-iOS-Swift/Modules/TransferTask/View/TransferTaskTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/TransferTask/View/TransferTaskTableViewCell.xib
@@ -52,12 +52,19 @@
                             <constraint firstAttribute="height" constant="24" id="a6B-LH-nni"/>
                         </constraints>
                     </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ITN-Sd-jWz" customClass="MDCProgressView">
-                        <rect key="frame" x="264" y="16.5" width="40" height="40"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ITN-Sd-jWz" customClass="MDRadialProgressView">
+                        <rect key="frame" x="254" y="11.5" width="50" height="50"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVX-sn-O7u">
+                                <rect key="frame" x="10" y="10" width="30" height="30"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="n23-52-HZ3"/>
-                            <constraint firstAttribute="width" constant="40" id="smN-lh-3Xj"/>
+                            <constraint firstItem="LVX-sn-O7u" firstAttribute="centerX" secondItem="ITN-Sd-jWz" secondAttribute="centerX" id="Vs1-QD-8Nj"/>
+                            <constraint firstItem="LVX-sn-O7u" firstAttribute="centerY" secondItem="ITN-Sd-jWz" secondAttribute="centerY" id="Z1Q-So-5xM"/>
+                            <constraint firstAttribute="height" constant="50" id="n23-52-HZ3"/>
+                            <constraint firstAttribute="width" constant="50" id="smN-lh-3Xj"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -85,7 +92,8 @@
                 <outlet property="detailImageView" destination="lhb-yg-Y0w" id="rvz-cX-GcW"/>
                 <outlet property="detailLabel" destination="myi-uH-6WF" id="sak-YQ-K6K"/>
                 <outlet property="leftImageView" destination="ulA-DQ-mvo" id="Pud-z0-DO2"/>
-                <outlet property="progress" destination="ITN-Sd-jWz" id="0I0-D7-zzn"/>
+                <outlet property="progress" destination="ITN-Sd-jWz" id="RF0-Ch-8cR"/>
+                <outlet property="suspendButton" destination="LVX-sn-O7u" id="Dbl-ye-9H6"/>
                 <outlet property="titleLabel" destination="Hsk-rR-deJ" id="Ln2-Eq-rgt"/>
             </connections>
             <point key="canvasLocation" x="34" y="68"/>
