--- a/Wisnuc-iOS-Swift/Modules/Files/View/DrawerView/TableViewCell/FilesOfflineTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/Files/View/DrawerView/TableViewCell/FilesOfflineTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -47,6 +47,9 @@
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAK-Pv-cAI" customClass="IconButton" customModule="Material">
                         <rect key="frame" x="274" y="17" width="30" height="30"/>
+                        <connections>
+                            <action selector="moreButtonTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="u82-Dn-3lB"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
