--- a/Wisnuc-iOS-Swift/Modules/TransferTask/View/TransferTaskTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/TransferTask/View/TransferTaskTableViewCell.xib
@@ -26,20 +26,20 @@
                             <constraint firstAttribute="height" constant="24" id="v1J-U1-sNl"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsk-rR-deJ">
-                        <rect key="frame" x="72" y="15" width="192" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsk-rR-deJ">
+                        <rect key="frame" x="72" y="15" width="192" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87227097602739723" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myi-uH-6WF">
-                        <rect key="frame" x="98" y="42" width="31" height="14.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myi-uH-6WF">
+                        <rect key="frame" x="98" y="56.5" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54358411815068497" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lhb-yg-Y0w">
-                        <rect key="frame" x="72" y="40.5" width="18" height="18"/>
+                        <rect key="frame" x="72" y="48" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="7Hz-0g-Olx"/>
                             <constraint firstAttribute="width" constant="18" id="raV-Y6-DWV"/>
