--- a/Wisnuc-iOS-Swift/Modules/Files/View/DrawerView/TableViewCell/FilesOfflineTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/Files/View/DrawerView/TableViewCell/FilesOfflineTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptu-fa-g62">
-                        <rect key="frame" x="72" y="12" width="36" height="17"/>
+                        <rect key="frame" x="72" y="12" width="186" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86959546232876717" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -47,6 +47,10 @@
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAK-Pv-cAI" customClass="IconButton" customModule="Material">
                         <rect key="frame" x="274" y="17" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="4Uc-Zs-adF"/>
+                            <constraint firstAttribute="width" constant="30" id="OsZ-0R-pQr"/>
+                        </constraints>
                         <connections>
                             <action selector="moreButtonTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="u82-Dn-3lB"/>
                         </connections>
@@ -63,6 +67,7 @@
                     <constraint firstItem="TpI-zX-wZu" firstAttribute="leading" secondItem="UZX-Ik-QzR" secondAttribute="trailing" constant="32" id="lj3-Ts-jQ7"/>
                     <constraint firstAttribute="bottom" secondItem="JOi-I8-nF4" secondAttribute="bottom" constant="12" id="q6R-ZY-MPz"/>
                     <constraint firstItem="JOi-I8-nF4" firstAttribute="leading" secondItem="TpI-zX-wZu" secondAttribute="trailing" constant="8" id="r1M-s1-cJk"/>
+                    <constraint firstItem="kAK-Pv-cAI" firstAttribute="leading" secondItem="Ptu-fa-g62" secondAttribute="trailing" constant="16" id="wzP-10-fxs"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -74,7 +79,7 @@
                 <outlet property="moreButton" destination="kAK-Pv-cAI" id="3SK-aY-p9r"/>
                 <outlet property="titleLabel" destination="Ptu-fa-g62" id="wHO-ef-qEv"/>
             </connections>
-            <point key="canvasLocation" x="34" y="64"/>
+            <point key="canvasLocation" x="33.600000000000001" y="63.868065967016499"/>
         </tableViewCell>
     </objects>
     <resources>
