--- a/Wisnuc-iOS-Swift/Modules/Login/View/RadioButtonTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/Login/View/RadioButtonTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,8 +19,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="55.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evZ-Ua-Yms" customClass="WSRadioButton">
-                        <rect key="frame" x="24" y="8" width="24" height="24"/>
+                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evZ-Ua-Yms" customClass="WSRadioButton">
+                        <rect key="frame" x="24" y="18" width="24" height="24"/>
                         <state key="normal" image="radio_button_unchecked.png"/>
                         <state key="selected" image="radio_button.png"/>
                         <connections>
@@ -44,7 +44,6 @@
                     <constraint firstItem="evZ-Ua-Yms" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="19f-fR-DDl"/>
                     <constraint firstItem="UUr-aL-mph" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Xlz-EL-WKk"/>
                     <constraint firstAttribute="bottom" secondItem="zoz-V2-NjE" secondAttribute="bottom" constant="8" id="dXe-J1-6BD"/>
-                    <constraint firstItem="evZ-Ua-Yms" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="eUm-cw-HIB"/>
                     <constraint firstItem="UUr-aL-mph" firstAttribute="leading" secondItem="evZ-Ua-Yms" secondAttribute="trailing" constant="16" id="fbr-D5-m1x"/>
                     <constraint firstItem="zoz-V2-NjE" firstAttribute="leading" secondItem="evZ-Ua-Yms" secondAttribute="trailing" constant="16" id="sWJ-iW-DxX"/>
                 </constraints>
